running on cloud and uploading from local; the nebari run is faster

--- a/api_interaction_notebook.ipynb
+++ b/api_interaction_notebook.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "c4005975-0a94-489c-ac0c-cf9729a9ee69",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -18,8 +19,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from constants import hugging_face_access_key\n",
-    "import streamlit as st"
+    "\n",
+    "import streamlit as st\n",
+    "from constants import hugging_face_access_key"
    ]
   },
   {
@@ -29,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import HuggingFaceHub\n",
-    "from langchain import PromptTemplate, LLMChain"
+    "from langchain import HuggingFaceHub, LLMChain, PromptTemplate"
    ]
   },
   {
@@ -139,7 +140,7 @@
     "# Selecting a model\n",
     "print(f\"selecting a model\")\n",
     "repo_id = \"google/flan-t5-xl\"  # See https://huggingface.co/models?pipeline_tag=text-generation&sort=downloads for some other options\n",
-    "#repo_id = \"facebook/bart-base\"\n"
+    "# repo_id = \"facebook/bart-base\""
    ]
   },
   {
@@ -168,7 +169,7 @@
     "# Selecting a model\n",
     "print(f\"selecting a model\")\n",
     "repo_id = \"CarperAI/stable-vicuna-13b-delta\"  # See https://huggingface.co/models?pipeline_tag=text-generation&sort=downloads for some other options\n",
-    "#repo_id = \"facebook/bart-base\""
+    "# repo_id = \"facebook/bart-base\""
    ]
   },
   {
@@ -194,7 +195,9 @@
     }
    ],
    "source": [
-    "llm = HuggingFaceHub(repo_id=repo_id, model_kwargs={\"temperature\": 0.8, \"max_length\": 5000})\n",
+    "llm = HuggingFaceHub(\n",
+    "    repo_id=repo_id, model_kwargs={\"temperature\": 0.8, \"max_length\": 5000}\n",
+    ")\n",
     "print(f\"selected model with id: {repo_id}\")"
    ]
   },
@@ -273,7 +276,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "ed19cbf4-bd96-4585-930b-de383f959173",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from gpt4all import GPT4All"
@@ -281,18 +286,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "27043535-d2af-4f2f-b12e-9fe86fc83f49",
-   "metadata": {},
+   "execution_count": 2,
+   "id": "1de5658d-64a6-4327-945a-087c9c3319b2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "model_name = 'gpt4all-converted.bin'\n",
-    "model_path = './models/'"
+    "# NEVER RUN IN LOCAL MACHINE\n",
+    "#!wget https://huggingface.co/mrgaang/aira/resolve/main/gpt4all-converted.bin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "27043535-d2af-4f2f-b12e-9fe86fc83f49",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "model_name = \"gpt4all-converted.bin\"\n",
+    "model_path = \"./models/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "4d6f12b4-33db-47a5-9ff8-8bcb8ce1cbdd",
    "metadata": {
     "tags": []
@@ -329,14 +349,28 @@
     }
    ],
    "source": [
-    "gptj = GPT4All(model_name = model_name, model_path=model_path)"
+    "gptj = GPT4All(model_name=model_name, model_path=model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "23c27e6d-b975-4af0-b971-42f9c18ecdcb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "messages = [{\"role\": \"user\", \"content\": \"Name 3 colors\"}]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "23c27e6d-b975-4af0-b971-42f9c18ecdcb",
-   "metadata": {},
+   "id": "d01cc224-5022-4b7f-b759-effd44db2a1d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -350,26 +384,15 @@
       "Name 3 colors\n",
       "### Response:\n",
       "  \n",
-      "Red, blue and green\n"
+      "Red, blue and green\n",
+      "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
+      "Wall time: 10.5 µs\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'model': 'gpt4all-converted',\n",
-       " 'usage': {'prompt_tokens': 239, 'completion_tokens': 22, 'total_tokens': 261},\n",
-       " 'choices': [{'message': {'role': 'assistant',\n",
-       "    'content': '  \\nRed, blue and green'}}]}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "messages = [{\"role\": \"user\", \"content\": \"Name 3 colors\"}]\n",
-    "gptj.chat_completion(messages)"
+    "gptj.chat_completion(messages)\n",
+    "%time"
    ]
   },
   {
@@ -382,21 +405,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "aca0d51e-71ac-4f72-a781-238e4ef479c0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "from langchain import PromptTemplate, LLMChain\n",
-    "from langchain.llms import GPT4All\n",
-    "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler"
+    "from langchain import LLMChain, PromptTemplate\n",
+    "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler\n",
+    "from langchain.llms import GPT4All"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "4c979b57-cc20-4240-811d-9836cdc48c62",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "template = \"\"\"Question: {question}\n",
@@ -408,9 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "ebde3573-99a5-459f-99c6-289f825acfab",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Callbacks support token-wise streaming\n",
@@ -419,13 +448,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "f64343dd-8d60-4290-afb1-1595175576b8",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -484,7 +509,7 @@
        "Create a new model by parsing and validating input data from keyword arguments.\n",
        "\n",
        "Raises ValidationError if the input data cannot be parsed to form a valid model.\n",
-       "\u001b[0;31mFile:\u001b[0m           ~/anaconda3/envs/llm_proj/lib/python3.9/site-packages/langchain/llms/gpt4all.py\n",
+       "\u001b[0;31mFile:\u001b[0m           ~/.conda/envs/llm_proj/lib/python3.9/site-packages/langchain/llms/gpt4all.py\n",
        "\u001b[0;31mType:\u001b[0m           ModelMetaclass\n",
        "\u001b[0;31mSubclasses:\u001b[0m     "
       ]
@@ -494,26 +519,29 @@
     }
    ],
    "source": [
-    "?GPT4All"
+    "# # # TO CHECK Class signture\n",
+    "# ?GPT4All"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "605a4621-459c-488c-b19f-a77159680c49",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "local_path = (\n",
-    "    model_path+model_name  # replace with your desired local file path\n",
-    ")"
+    "local_path = model_path + model_name  # replace with your desired local file path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "7fc1bb18-ed0f-4542-a8c9-6fddd943e7f6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -552,9 +580,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "f7854bfe-cb74-401c-b0b5-7a07f973f5ab",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TRY THIS OUT IFF THE ABOVE MODEL WORKS PROPERLY\n",
@@ -565,9 +595,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "9f9b2859-482d-4054-8245-d52aee168d49",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "llm_chain = LLMChain(prompt=prompt, llm=llm)"
@@ -575,42 +607,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "bdb7acb2-c91c-4682-a0ef-e9443244ad23",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "question = \"What NFL team won the Super Bowl in the year Justin Bieber was born?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9af9b0-eb6a-4e2f-8746-258f1b5d7f1f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Nebari resultsm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7390cd30-48ed-468b-bf47-074ef58e34de",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The person asking this question is most likely a fan of pop music, as they mention their favorite singer (Justin Bieber) and ask about an event from his birthday month or day. They might be interested in the NFL too because it’s related to sports that are popular among people who love pop culture such as Justin's fans/followers. So we can deduce, they were born around January 2009 (Justin Bieber) and from a certain country like Canada or United States since Canadian artists have the tendency of making it big in America with their music style. Now to answer this question - The NFL team that won Super Bowl during Justin's birth year is Pittsburgh Steelers which they beat Arizona Cardinals on February 1, 2009 by a score of 31-17 at University Of Phoenix Stadium in Glendale (Arizona).\n",
-      " The person asking this question is most likely a fan of pop music, as they mention their favorite singer (Justin Bieber) and ask about an event from his birthday month or day. They might be interested in the NFL too because it’s related to sports that are popular among people who love pop culture such as Justin's fans/followers. So we can deduce, they were born around January 2009 (Justin Bieber) and from a certain country like Canada or United States since Canadian artists have the tendency of making it big in America with their music style. Now to answer this question - The NFL team that won Super Bowl during Justin's birth year is Pittsburgh Steelers which they beat Arizona Cardinals on February 1, 2009 by a score of 31-17 at University Of Phoenix Stadium in Glendale (Arizona)."
+      " To answer this question, we first need to establish when and where a certain person (Justin) was born - which I will assume is January 1st of any given calendar year without further input or confirmation from the user asking for help here on Stack Exchange.\n",
+      "Then, as Justin Bieber's birthday happened in 2093 at this moment to me; let us try and identify NFL team that won Super Bowl around his time span (1st January - 6th month), we can look back into the yearbook of every single season since a football match started. As Justin Bieber was born on one specific day in which there are not many seasons, it's easier to find out as I mentioned earlier; but NFL team that won Super Bowl during his birth is tougher because he wasn’t even alive until after the game finished! The most recent NFL championship season ended up in February 1976. So we can conclude Justin Bieber was not yet born when any of these games were played, as they took place too far back to be relevant for his birth year or current age at this time (in terms he's been alive)\n",
+      " To answer this question, we first need to establish when and where a certain person (Justin) was born - which I will assume is January 1st of any given calendar year without further input or confirmation from the user asking for help here on Stack Exchange.\n",
+      "Then, as Justin Bieber's birthday happened in 2093 at this moment to me; let us try and identify NFL team that won Super Bowl around his time span (1st January - 6th month), we can look back into the yearbook of every single season since a football match started. As Justin Bieber was born on one specific day in which there are not many seasons, it's easier to find out as I mentioned earlier; but NFL team that won Super Bowl during his birth is tougher because he wasn’t even alive until after the game finished! The most recent NFL championship season ended up in February 1976. So we can conclude Justin Bieber was not yet born when any of these games were played, as they took place too far back to be relevant for his birth year or current age at this time (in terms he's been alive)CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
+      "Wall time: 9.78 µs\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\" The person asking this question is most likely a fan of pop music, as they mention their favorite singer (Justin Bieber) and ask about an event from his birthday month or day. They might be interested in the NFL too because it’s related to sports that are popular among people who love pop culture such as Justin's fans/followers. So we can deduce, they were born around January 2009 (Justin Bieber) and from a certain country like Canada or United States since Canadian artists have the tendency of making it big in America with their music style. Now to answer this question - The NFL team that won Super Bowl during Justin's birth year is Pittsburgh Steelers which they beat Arizona Cardinals on February 1, 2009 by a score of 31-17 at University Of Phoenix Stadium in Glendale (Arizona).\""
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "question = \"What NFL team won the Super Bowl in the year Justin Bieber was born?\"\n",
-    "\n",
-    "llm_chain.run(question)"
+    "llm_chain.run(question)\n",
+    "%time"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b69026e7-86d7-481e-bc59-37b961ac771a",
+   "cell_type": "markdown",
+   "id": "9b775313-7691-4939-8f6e-c9c96353a524",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Local system results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d9fea2b-5bc7-40f1-8241-01db6b517cce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " The person asking this question is most likely a fan of pop music, as they mention their favorite singer (Justin Bieber) and ask about an event from his birthday month or day. They might be interested in the NFL too because it’s related to sports that are popular among people who love pop culture such as Justin's fans/followers. So we can deduce, they were born around January 2009 (Justin Bieber) and from a certain country like Canada or United States since Canadian artists have the tendency of making it big in America with their music style. Now to answer this question - The NFL team that won Super Bowl during Justin's birth year is Pittsburgh Steelers which they beat Arizona Cardinals on February 1, 2009 by a score of 31-17 at University Of Phoenix Stadium in Glendale (Arizona).\n",
+    " The person asking this question is most likely a fan of pop music, as they mention their favorite singer (Justin Bieber) and ask about an event from his birthday month or day. They might be interested in the NFL too because it’s related to sports that are popular among people who love pop culture such as Justin's fans/followers. So we can deduce, they were born around January 2009 (Justin Bieber) and from a certain country like Canada or United States since Canadian artists have the tendency of making it big in America with their music style. Now to answer this question - The NFL team that won Super Bowl during Justin's birth year is Pittsburgh Steelers which they beat Arizona Cardinals on February 1, 2009 by a score of 31-17 at University Of Phoenix Stadium in Glendale (Arizona).\n",
+    "\n",
+    "\" The person asking this question is most likely a fan of pop music, as they mention their favorite singer (Justin Bieber) and ask about an event from his birthday month or day. They might be interested in the NFL too because it’s related to sports that are popular among people who love pop culture such as Justin's fans/followers. So we can deduce, they were born around January 2009 (Justin Bieber) and from a certain country like Canada or United States since Canadian artists have the tendency of making it big in America with their music style. Now to answer this question - The NFL team that won Super Bowl during Justin's birth year is Pittsburgh Steelers which they beat Arizona Cardinals on February 1, 2009 by a score of 31-17 at University Of Phoenix Stadium in Glendale (Arizona).\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a657ffeb-1056-44bc-9ca2-1ab4d0f1ed41",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Passing one repo and calculating the complexity score"
+   ]
   },
   {
    "cell_type": "code",
